--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Amo você</title>
 </head>
 <body>
-    <h1>Eu amo a minha Estrelinha 😍</h1>
-    
+    <h1>Almoçar Estrelinha? 😍</h1>  
 </body>
 </html>
