--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amo você</title>
+    <link rel="icon" href="./duck.svg">
 </head>
 <body>
     <h1>Almoçar Estrelinha? 🤔🦆</h1> 
