--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="icon" href="./duck.svg">
 </head>
 <body>
-    <h1>Almoçar Estrelinha? 🤔🦆</h1> 
-    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc.tenor.com%2FRYLPCaKM-RoAAAAM%2Fduck-drinking.gif&f=1&nofb=1&ipt=b1e9c54cf8a1352ecbd0cc772b19281a80b4514bbccf6855885f0b54e8b8c6d2&ipo=images" alt="">
+    <main>
+        <h1>Almoçar Estrelinha? 🤔🦆</h1> 
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc.tenor.com%2FRYLPCaKM-RoAAAAM%2Fduck-drinking.gif&f=1&nofb=1&ipt=b1e9c54cf8a1352ecbd0cc772b19281a80b4514bbccf6855885f0b54e8b8c6d2&ipo=images" alt="">
+        <button>VAMOS!</button>
+    </main>
+    <script src="./script.js"></script>
 </body>
 </html>
