--- a/index.html
+++ b/index.html
@@ -5,6 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DuoFlix</title>
     <link rel="icon" href="./duck.svg">
+    <style>
+      /* Estilos gerais para o site */
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f8f8f8;
+      }
+
+      #movie-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 20px;
+      }
+
+      .movie-card {
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin: 10px;
+        width: 250px;
+        text-align: center;
+        transition: transform 0.3s ease;
+      }
+
+      .movie-card:hover {
+        transform: translateY(-5px);
+      }
+
+      .movie-card img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px 8px 0 0;
+      }
+
+      .movie-card h3 {
+        font-size: 18px;
+        margin: 10px 0;
+        color: #333;
+      }
+
+      .movie-card p {
+        font-size: 14px;
+        color: #555;
+        padding: 0 10px;
+        margin-bottom: 10px;
+      }
+
+      .movie-card button {
+        padding: 8px 16px;
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
+
+      .movie-card button:hover {
+        background-color: #0056b3;
+      }
+
+      /* Media Query para telas pequenas (celulares) */
+      @media (max-width: 768px) {
+        .movie-card {
+          width: 200px; /* Ajusta a largura dos cartões para caber melhor na tela */
+        }
+
+        .movie-card h3 {
+          font-size: 16px; /* Ajusta o tamanho da fonte do título */
+        }
+
+        .movie-card p {
+          font-size: 12px; /* Ajusta o tamanho da fonte da sinopse */
+        }
+
+        .movie-card button {
+          font-size: 12px; /* Ajusta o tamanho do botão */
+        }
+      }
+
+      /* Media Query para telas ainda menores (celulares pequenos) */
+      @media (max-width: 480px) {
+        .movie-card {
+          width: 150px; /* Reduz ainda mais a largura dos cartões */
+        }
+
+        .movie-card h3 {
+          font-size: 14px; /* Diminui o tamanho do título para telas pequenas */
+        }
+
+        .movie-card p {
+          font-size: 10px; /* Diminui o tamanho da sinopse */
+          padding: 0 5px; /* Ajusta o padding */
+        }
+
+        .movie-card button {
+          font-size: 10px; /* Ajusta o tamanho do botão */
+        }
+      }
+    </style>
 </head>
 <body>
 
