--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         });
       };
 
-      // Função para buscar filmes populares
+      // Função para buscar filmes populares (agora com idioma em português)
       const fetchPopularMovies = async () => {
         try {
-          const response = await fetch(`${BASE_URL}/movie/popular?api_key=${API_KEY}`);
+          const response = await fetch(`${BASE_URL}/movie/popular?api_key=${API_KEY}&language=pt-BR`);
           const data = await response.json();
           if (data.results) {
             return data.results;
